force-app/main/default/objects/Feedback__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <defaultValue>&quot;C&amp;C&quot;</defaultValue>
    <label>App Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;C</fullName>
                <default>true</default>
                <label>C&amp;C</label>
            </value>
            <value>
                <fullName>myMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>