force-app/main/default/objects/Feedback__c/fields/Last_Visited_Service_Cent__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Service_Cent__c</fullName>
    <label>Last Visited Service Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>