force-app/main/default/objects/Feedback__c/listViews/All_Feedbacks.listView-meta.xml
<ListView>
    <fullName>All_Feedbacks</fullName>
    <columns>NAME</columns>
    <columns>App_Type__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Last_Visited_Service_Cent__c</columns>
    <columns>Message__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>App_Type__c</field>
        <operation>contains</operation>
        <value>C&amp;C,myMB</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2008 12:00 AM</value>
    </filters>
    <filters>
        <field>Email__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>All Feedbacks</label>
</ListView>