force-app/main/default/objects/Feedback__c/listViews/Jan_2021.listView-meta.xml
<ListView>
    <fullName>Jan_2021</fullName>
    <columns>App_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Category__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Last_Visited_Service_Cent__c</columns>
    <columns>Message__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>1/31/2021 12:00 AM</value>
    </filters>
    <label>Jan 2021</label>
</ListView>